oidc-auth/network/cors/envoy-filter-inject-logout-url.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: lua-filter
  namespace: auth
spec:
  workloadSelector:
    labels:
      app: keycloak
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
            subFilter:
              name: "envoy.filters.http.router"
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.lua
        typed_config:
          "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua"
          inlineCode: |
            function envoy_on_response(response_handle)
              body = response_handle:body()
              body:add('{"AfterLogoutURL": "kubeflow.kubefrog.fr"}')
              response_handle:headers():replace("content-length", tostring(body:length()))
            end
