oidc-auth/network/cors/virtual-service-cloud-cors.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: auth-cloud
  namespace: auth
  labels:
    app: auth
spec:
  gateways:
  - auth-gateway-cloud
  hosts:
  - auth.kubefrog.fr
  http:
  - route:
    - destination:
        host: keycloak
        port:
          number: 80
    corsPolicy:
      allowOrigins:
      - exact: https://kubeflow.kubefrog.fr
      allowMethods:
      - POST
      - GET
      - OPTIONS
      allowCredentials: true
      allowHeaders:
      - '*'
